src/feature/Reset Password/resetPassword.scss
@import '../../app/layout/base';
@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');

.form{
    width: 80%;
    margin: auto;
    padding-top: 5%;
}
.reset {
    font-size: 130%;
    margin: auto;
}
.reset h1{
    font-size: 48px;
    position: relative;
    left: 30%;
}
.reset p{
    position: relative;
    left: 5%;
}
.inputForm input {
    border: 3px rgba(0, 0, 0, 0.089) solid;
    border-top: none;
    border-left: none;
    border-right: none;
    width: 80%;
    margin-top: 1%;
    padding-top: 1%;
    margin-left: 4%;
}
input,
.inputForm::-webkit-input-placeholder {
    font-size: 20px;
    line-height: 2;
}
.send{
    position: absolute;
    right: 23%;
    border: 1px solid #4887C2;
    color: #4887C2;
}
.formButton button{
    font-size: 110%;
    border-radius: 25px;
    width: 10%;
    height: 5%;
    margin-top: 2%;
}
:focus{
    outline: none;
}

@media screen and (max-width: 1024px) and (min-width: 700px) {
    .reset h1{
        font-size: 30px;
        position: relative;
        left: 5%;
    }
    .reset p{
        position: relative;
        left: 5%;
        font-size: 15px;
    }
    .send{
        position: absolute;
        right: 13%;
        border: 1px solid #4887C2;
        color: #4887C2;
    }
    .formButton button{
        float: none;
        font-size: 100%;
        border-radius: 20px;
        width: 19%;
        height: 4%;
        margin-right: -13px;
        margin-top: 4%;
        background: rgb(255, 254, 254);
    }
    .inputForm input {
        border: 3px rgba(37, 37, 37, 0.137) solid;
        border-top: none;
        border-left: none;
        border-right: none;
        width: 100%;
        margin-top: 1%;
        padding-top: 1%;
        margin-left: 4%;
    }
    input,
    .inputForm::-webkit-input-placeholder {
    font-size: 13px;
    line-height: 2;
}
:focus{
    outline: none;
}
  }
  @media (min-width: 320px) and (max-width: 480px) {
    .reset h1{
        font-size: 30px;
        position: relative;
        left: 5%;
    }
    .reset p{
        position: relative;
        left: 5%;
        font-size: 15px;
    }
    .send{
        position: absolute;
        right: 13%;
        border: 1px solid #4887C2;
        color: #4887C2;
    }
    .formButton button{
        float: none;
        font-size: 100%;
        border-radius: 20px;
        width: 25%;
        height: 4%;
        margin-right: -13px;
        margin-top: 4%;
        background: rgb(255, 254, 254);
    }
    .inputForm input {
        border: 3px rgba(37, 37, 37, 0.137) solid;
        border-top: none;
        border-left: none;
        border-right: none;
        width: 100%;
        margin-top: 1%;
        padding-top: 1%;
        margin-left: 4%;
    }
    input,
    .inputForm::-webkit-input-placeholder {
    font-size: 13px;
    line-height: 2;
}
  }

body {
 background: #fff;
 font-family: 'Open Sans', sans-serif;
 letter-spacing: 1px;
 .App {
   .App-header {
     background-color: #282c34;
     height: 6.2rem;
     font-size: 25px;
     color: white;
   }
 }
 .nav-wrapper {
   .App-logo {
     height: 5rem;
     margin: 10px 10px 10px 50px;
     float: left;
   }
   .right {
     float: right;
   }
   .last {
     margin-right: 50px;
   }
   ul {
     display: flex;
     li {
       list-style-type: none;
       text-transform: uppercase;
       line-height: 45px;
       a {
         color: #fff;
         text-decoration: none;
         padding: 15px 20px 15px 20px;
         font-size: 1.2rem;
         font-weight: bolder;
       }
       a:hover {
         background: #fff;
         color: #282c34;
         cursor: pointer;
       }
     }
   }
 }
 .intro {
   margin-top: 20%;
   font-size: 1.5rem;
   font-weight: bold;
   text-align: center;
 }
 .App-logo {
    display: none;
  }
  .last {
    margin-right: 15px !important;
  }
}

